--- a/Exercicios/desafio-cordel/imagens/style.css
+++ b/Exercicios/desafio-cordel/imagens/style.css
@@ -1,23 +1,37 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;;
+
+}
 
 * {
     margin: 0px;
     padding: 0px; 
-
+    font-size: 1em;
+    
 }
 
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
 
 header {
+    font-family: var(--fonte1);
     background-color: black;
     color: white;
     text-align: center;
     
 }
 header > h1 {
+    font-size: 10vw;
+    font-family: var(--font2);
     padding-top: 50px;
     font-variant: small-caps;
 }
@@ -37,10 +51,12 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--font3);
     padding-top: 10%;
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -54,10 +70,12 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    padding: 5px;
+    display: inline-block;
     background-color: rgb(39, 37, 37);
 }
 footer {
+    font-family: var(--fonte1);
     background-color: black;
     text-align: center;
     color: white;
