--- a/Exercicios/desafio-cordel/imagens/style.css
+++ b/Exercicios/desafio-cordel/imagens/style.css
@@ -59,21 +59,43 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: aliceblue;
 }
 
 
 section.imagem {
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);
     color: white;
-    background-color: rgb(85, 83, 83);
+    background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     padding: 5px;
     display: inline-block;
-    background-color: rgb(39, 37, 37);
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 3px 2px 0px rgba(0, 0, 0, 0.637);
 }
+section#img01 {
+    background-position: right center;
+    
+    background-image: url(background001.jpg);
+}
+
+section#img02 {
+    background-size: cover;
+    background-image: url(background002.jpg);
+}
+
+
+
+
 footer {
     font-family: var(--fonte1);
     background-color: black;
